# orbitec-drf-test

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
orbitec_api/: asgi.py  settings.py  urls.py  wsgi.py
vehicles/: models.py  serializers.py  urls.py  views.py
vehicles/migrations/: 0001_initial.py  0002_alter_vehicle_alias_alter_vehicle_name.py
