[tool.poetry]
name = "orbitect-api-test"
version = "0.1.0"
description = "Orbitect test for django rest framework"
authors = ["Patrick Vilchez <pvilchez794@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
